--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body{
     background: blue
+
+}
+p{
+    background-color: cyan;
+    color: red;
+    font-size: 25px;
+    width: 200px;
+    height: 200px;
+    border-style:solid;
+    border-color: darkblue;
+    border-width: 5px;
+
 }
